# Harmonbot

./: .appveyor.yml  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pyup.yml  .scrutinizer.yml  .stickler.yml  .travis.yml  CNAME  Harmonbot.bat  Harmonbot.py  Harmonbot.pyw  Harmonbot_Beta.bat  Harmonbot_Listener.bat  Harmonbot_Listener.go  LICENSE  README.md  RSS_Bot.bat  RSS_Bot.py  Run_Harmonbot.bat  adventure  adventure.bak  aliases.bak  aribeeecommands.bak  changelog  changelog.bak  client.py  clients.py  config.toml  conversions.py  credentials.py  define  define.bak  dependencies.yml  ehp  ehp.bak  elements  elements.bak  ge  (+44 more)
.circleci/: config.yml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  platforms.yml  tests.yml
Discord/: Harmonbot.py  Harmonbot_Listener.go  bot.py  clients.py  credentials.py  tree.py
Discord/cogs/: 24.py  adventure.py  astronomy.py  audio.py  battlerite.py  blackjack.py  blobs.py  brawlhalla.py  channel.py  chess.py  (+53 more)
Telegram/: Telegram_Harmonbot.bat  Telegram_Harmonbot.py  credentials.py
Twitch/: Harmonbot.py  Twitch_Harmonbot.bat  Twitch_Harmonbot.py  credentials.py
cogs/: audio.py  budio.py  discord.py  games.py  meta.py  misc.py  permissions.py  random.py  reactions.py  resources.py  rss.py  search.py  tools.py  twitter.py
commands/: discord.py  games.py  meta.py  resources.py
docs/: README.md  index.html
modules/: chess.py  ciphers.py  documentation.py  logging.py  maze.py  permissions.py  utilities.py  voice.py  weather.py
scripts/: Harmonbot.bat  generate_playing_card_segments.py  get_baseball_people.py  get_trivia.py  update_trivia.py
tests/: __init__.py  test_bitcoin.py  test_calculation.py  test_cryptography.py  test_genshin_impact.py  test_location.py  test_quotes.py  test_runescape.py  test_time.py  test_trivia.py  test_twenty_four.py
units/: __init__.py  aiohttp_client.py  ansi.py  bitcoin.py  cache.py  calculation.py  clarifai.py  colors.py  credentials.py  cryptography.py  errors.py  files.py  games.py  insults.py  location.py  nitter.py  quotes.py  runescape.py  time.py  trivia.py  twenty_four.py  wikis.py
utilities/: audio_player.py  checks.py  chess.py  errors.py  help_formatter.py  paginator.py
(+86 files in other folders)
