[project]
name = "Harmonbot"
dynamic = ["version"]
requires-python = "~=3.10.11"

[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[tool.mypy]
packages = ["units"]
python_version = "3.10"

[tool.ruff]
ignore = [
    "E501",  # line-too-long
    "UP015",  # redundant-open-modes
]
include = ["tests/*.py", "units/*.py"]
select = [
    "E",  # pycodestyle error
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "PYI",  # flake8-pyi
    "UP",  # pyupgrade
]
target-version = "py310"

[tool.setuptools]
packages = ["units"]
