[project]
name = "Harmonbot"
dynamic = ["version"]
requires-python = "~=3.10.11"

[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[tool.mypy]
packages = ["units"]
python_version = "3.10"

[tool.ruff]
ignore = [
    "E501",  # line-too-long
    "TD002",  # missing-todo-author
    "UP015",  # redundant-open-modes
]
include = ["tests/*.py", "units/*.py"]
select = [
    "E",  # pycodestyle error
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "PYI",  # flake8-pyi
    "TD",  # flake8-todos
    "UP",  # pyupgrade
]
target-version = "py310"

[tool.setuptools]
packages = ["units"]
