[project]
name = "Harmonbot"
dynamic = ["version"]
requires-python = "~=3.10.11"

[build-system]
requires = ["setuptools==69.0.2", "setuptools-scm==8.0.4"]
build-backend = "setuptools.build_meta"

[tool.mypy]
packages = ["units"]
python_version = "3.10"

[tool.ruff]
ignore = [
    "E501",  # line-too-long
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "UP015",  # redundant-open-modes
]
include = ["tests/*.py", "units/*.py"]
select = [
    "E",  # pycodestyle error
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SLOT",  # flake8-slots
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
]
target-version = "py310"

[tool.setuptools]
packages = ["units"]

[tool.setuptools_scm]
